[package]
name = "signald"
version = "0.1.0"
authors = ["zschira <zasc3143@colorado.edu>"]
edition = "2018"

[features]
default = ["async-std"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.51"
uuid = { version = "0.8", features = ["v4"] }
async-std = { version = "1.9.0", features = ["attributes"], optional = true }
tokio = { version = "1.10.0", features = ["full"], optional = true }

[build-dependencies]
serde_json = "1.0"
codegen = "0.1.3"
convert_case = "0.4.0"
